// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 956,
  "sha256": "255d337c3019630e2e02c2fd6ea4e9e60c59e7991215e3f7114c16f786a81639",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 956,
  "sha256": "b687895004586d1c7c4ddd849a6f2619ca8b044e6e9eed77bb01dc5f678bccef",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 956,
  "sha256": "b687895004586d1c7c4ddd849a6f2619ca8b044e6e9eed77bb01dc5f678bccef",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 956,
  "sha256": "b687895004586d1c7c4ddd849a6f2619ca8b044e6e9eed77bb01dc5f678bccef",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 984,
  "sha256": "d7c69bcd68e92737f81d5c0a06aded92effb413fdff0717081bdebb724542d85",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;
